@@ -10,8 +10,8 @@ module Mail
     
     def initialize(value = nil, charset = 'utf-8')
       self.charset = charset
-      value = '7bit' if value.to_s =~ /7-bit/i
-      value = '8bit' if value.to_s =~ /8-bit/i
+      value = '7bit' if value.to_s =~ /7-?bits?/i
+      value = '8bit' if value.to_s =~ /8-?bits?/i
       super(CAPITALIZED_FIELD, strip_field(FIELD_NAME, value), charset)
       self.parse
       self
