@@ -1,6 +1,7 @@
 == HEAD
 
 Features:
+* Accept other IETF/IANA-registered Content-Types and Content-Transfer-Encodings (jeremy)
 * Alias shift-jis charset to Shift_JIS Ruby encoding (jeremy)
 * Add support for ks_c_5601-1987 charset, aliased to CP949 Ruby encoding (jeremy)
 * Don't allow colons in header names (jeremy)
